<resources>
    <string name="app_name">My Wardrobe</string>

    <string name="bottom_home_item">Acceuil</string>
    <string name="bottom_collection_item">Collection</string>
    <string name="bottom_add_cloth_item">Ajouter</string>

    <!-- Page d'accueil -->
    <string name="home_page_title">A Habiller</string>
    <string name="home_page_last_clothes_section">Dernières vêtements</string>

    <!-- Page de favoris -->
    <string name="favorites_page_title">Ma liste de favoris</string>

    <!-- Page d'ajout de vêtements -->
    <string name="add_clothes_page_title">Ajout de vêtement</string>
    <string name="add_clothes_page_upload_button">Charger Image</string>
    <string name="add_clothes_page_name_input">@string/item_clothes_name</string>
    <string name="add_clothes_page_description_input">@string/item_clothes_description</string>

    <string-array name="add_clothes_page_type_spinner_input">
        <item>Type : Dessus</item>
        <item>Type : Milieu</item>
        <item>Type : Dessous</item>
    </string-array>

    <string-array name="add_clothes_page_season_spinner_input">
        <item>Saison : été</item>
        <item>Saison : Hiver</item>
        <item>Saison : Automne/Printemps</item>
    </string-array>

    <string name="add_clothes_page_confirm_button">Confirmer</string>

    <!-- Fenetre Popup de details -->
    <string name="popup_clothes_name">Nom de vêtement</string>
    <string name="popup_clothes_description_title">Description</string>
    <string name="popup_clothes_description_subtitle">Petite description</string>
    <string name="popup_clothes_type_title">Type</string>
    <string name="popup_clothes_type_subtitle">Milieu</string>
    <string name="popup_clothes_season_title">Saison</string>
    <string name="popup_clothes_season_subtitle">Hiver</string>

    <!-- Vêtement customise -->
    <string name="item_clothes_name">Nom de vêtement</string>
    <string name="item_clothes_description">Description de vêtement</string>
</resources>